<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	tools:context="com.sapuseven.noticap.activity.AddFilterRuleActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin">

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:layout_marginTop="4dp">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="10"
					android:hint="@string/name"
					android:inputType="text"/>

			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/filter_by"
				android:textAllCaps="true"
				android:textColor="@color/colorAccent"
				android:textSize="14sp"/>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:layout_marginTop="4dp">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/package_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="10"
					android:hint="@string/package_name"
					android:inputType="text"/>

			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:text="@string/separate_packages_hint"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/conditions"
				android:textAllCaps="true"
				android:textColor="@color/colorAccent"
				android:textSize="14sp"/>

			<Switch
				android:id="@+id/daytime_switch"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/time_of_day"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/from"/>

				<Button
					android:id="@+id/button_from"
					style="@style/Widget.AppCompat.Button.Colored"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="8dp"
					android:layout_marginLeft="8dp"
					android:layout_marginRight="8dp"
					android:layout_marginStart="8dp"
					android:layout_weight="1"
					android:enabled="false"
					android:text="@string/default_from"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:text="@string/to"/>

				<Button
					android:id="@+id/button_to"
					style="@style/Widget.AppCompat.Button.Colored"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_weight="1"
					android:enabled="false"
					android:text="@string/default_to"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:layout_weight="3"
					android:text="Minimum notification delay: " />

				<EditText
					android:id="@+id/minNotiDelay"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="number" />
			</LinearLayout>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:layout_weight="1"
				android:text="@string/actions"
				android:textAllCaps="true"
				android:textColor="@color/colorAccent"
				android:textSize="14sp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:layout_weight="1"
					android:text="@string/ssh_identity" />

				<Spinner
					android:id="@+id/identities"
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:minWidth="128dp"/>
			</LinearLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:layout_marginTop="4dp">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/exec"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="10"
					android:gravity="top"
					android:hint="@string/shell_commands"
					android:inputType="textMultiLine"
					android:lines="5"/>

			</com.google.android.material.textfield.TextInputLayout>

		</LinearLayout>

	</ScrollView>

	<Button
		android:id="@+id/add"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/save"/>
</LinearLayout>
